# a1gpt

./: .gitignore  CMakeLists.txt  README.md  blas.h  bpe.cpp  bpe.h  bpe_test.cpp  cumain.cpp  kernel.cu  kernel.h  main.cpp  model.cpp  model.h  model_cu.cpp  model_load.cpp  model_load_gpt2.cpp  tensor.h
scripts/: download_and_convert_gpt2.py  getbpe.py  model_load.py
